add caching of the oremap file to shorten waits on large collections, check/create all missing cache files on startup,  also updated commons-compress version to latest